fix logo styles and prevent overlap (#59)

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -99,14 +99,16 @@ p.feedback {
 
 img.page-logo {
   display: flex;
-  margin-bottom: 1.2rem;
-  margin-left: 7rem;
-  width: 575px;
+  width: 200px;
+  @media screen and (max-width: 990px) {
+    display: none;
+  }
 }
 
 img.rh-logo {
   display: flex;
-  margin-bottom: 1.2rem;
-  margin-left: 7rem;
   width: 200px;
+  @media screen and (max-width: 990px) {
+    display: none;
+  }
 }
